added benchmarks working

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,6 @@ pyvenv*/
 pip-log.txt
 
 # Unit test / coverage reports
-.asv/
 .coverage
 .tox
 .coverage.*
@@ -34,6 +33,9 @@ pip-log.txt
 nosetests.xml
 coverage.xml
 htmlcov
+env/
+hangar/
+
 
 
 # Translations
